# hash-context-util

./: CMakeLists.txt  README.md  hash_generator.cpp  hash_generator.h  main.cpp  md5_generator.cpp  md5_generator.h  xxhash_generator.cpp  xxhash_generator.h
Resources/Generate xxHash.workflow/Contents/: Info.plist  document.wflow
test/ctest/: CMakeLists.txt  assert_macro.h  ctest_calc_md5.cpp  ctest_calc_xxhash.cpp
